--- a/lessonOOPExampleProject/lessonOOPExampleProject.vcxproj
+++ b/lessonOOPExampleProject/lessonOOPExampleProject.vcxproj
@@ -140,6 +140,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="students.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h" />
